[gd_scene format=3 uid="uid://byf7iljoqrotr"]

[ext_resource type="Script" uid="uid://ybc3vhthi6i5" path="res://scenes/states/playing/game_map.gd" id="1_5384n"]
[ext_resource type="PackedScene" uid="uid://y7g8xy3ginxi" path="res://scenes/states/playing/gameplay_menu.tscn" id="2_stlim"]
[ext_resource type="Script" uid="uid://md8k6faseouk" path="res://addons/DragAndDrop3D/nodes/drag_and_drop_3d.gd" id="2_tyn2t"]
[ext_resource type="Shader" uid="uid://cyy1aha4j5eb1" path="res://shaders/tilt_shift.gdshader" id="4_hgeeq"]
[ext_resource type="Script" uid="uid://bm2kst6ow2637" path="res://scenes/states/playing/camera_3d.gd" id="4_kjinj"]
[ext_resource type="Shader" path="res://shaders/lofi_canvas.gdshader" id="5_lofi_canvas"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lofi_canvas"]
shader = ExtResource("5_lofi_canvas")
shader_parameter/pixelation = 0.0050000002375
shader_parameter/saturation = 0.85
shader_parameter/color_tint = Color(1.02, 1, 0.96, 1)
shader_parameter/color_levels = 8.000000284999999
shader_parameter/dither_strength = 0.50000002375
shader_parameter/vignette_strength = 0.550000026125
shader_parameter/vignette_radius = 0.750000035625
shader_parameter/grain_intensity = 0.025
shader_parameter/grain_speed = 0.2
shader_parameter/grain_scale = 0.12

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_stlim"]
auto_exposure_scale = 0.8
dof_blur_far_distance = 18.28
dof_blur_far_transition = -1.0
dof_blur_near_distance = 15.82
dof_blur_near_transition = -1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hgeeq"]
render_priority = 0
shader = ExtResource("4_hgeeq")
shader_parameter/focal_point = Vector3(0, 0, 0)
shader_parameter/DoF = 5.0
shader_parameter/blur_cap = 2.0
shader_parameter/blur_rate = 2.0
shader_parameter/vertical_bias = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_stlim"]
material = SubResource("ShaderMaterial_hgeeq")
flip_faces = true
size = Vector2(2, 2)

[node name="GameMap" type="Node3D" unique_id=645056017]
script = ExtResource("1_5384n")

[node name="WorldViewportLayer" type="CanvasLayer" parent="." unique_id=2005059088]
layer = -1

[node name="SubViewportContainer" type="SubViewportContainer" parent="WorldViewportLayer" unique_id=309537514]
material = SubResource("ShaderMaterial_lofi_canvas")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="WorldViewportLayer/SubViewportContainer" unique_id=824553050]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="CameraHolder" type="Node3D" parent="WorldViewportLayer/SubViewportContainer/SubViewport" unique_id=85234734]

[node name="Camera3D" type="Camera3D" parent="WorldViewportLayer/SubViewportContainer/SubViewport/CameraHolder" unique_id=1648455475]
transform = Transform3D(0.7071068, -0.26030335, 0.6574513, 0, 0.9297765, 0.36812454, -0.7071068, -0.26030335, 0.6574513, 11.088, 8, 11.088)
attributes = SubResource("CameraAttributesPractical_stlim")
projection = 1
size = 13.85
near = 0.001
far = 1000.0
script = ExtResource("4_kjinj")

[node name="DirectionalLight3D" type="OmniLight3D" parent="WorldViewportLayer/SubViewportContainer/SubViewport/CameraHolder/Camera3D" unique_id=345852792]
visible = false
light_energy = 2.0
shadow_enabled = true
omni_range = 50.0
omni_attenuation = 0.247
omni_shadow_mode = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldViewportLayer/SubViewportContainer/SubViewport/CameraHolder/Camera3D" unique_id=1855205540]
visible = false
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_stlim")

[node name="RayCast3D" type="RayCast3D" parent="WorldViewportLayer/SubViewportContainer/SubViewport/CameraHolder/Camera3D" unique_id=2086795722]
visible = false
target_position = Vector3(0, 0, -100)
hit_back_faces = false

[node name="MapContainer" type="Node3D" parent="WorldViewportLayer/SubViewportContainer/SubViewport" unique_id=482917301]

[node name="DragAndDrop3D" type="Node3D" parent="WorldViewportLayer/SubViewportContainer/SubViewport" unique_id=390056310 groups=["DragAndDrop3D"]]
script = ExtResource("2_tyn2t")
metadata/_custom_type_script = "uid://md8k6faseouk"

[node name="GameplayMenu" parent="." unique_id=2132725076 instance=ExtResource("2_stlim")]
